<resources>
    <string name="app_name">FY FM</string>
    <string name="error_image_text">error image</string>
    <string name="album_image_text">album image</string>
    <string name="track_image_text">track image</string>
    <string name="download_text">download</string>
    <string name="share_text">share</string>
    <string name="home_text">Home</string>
    <string name="explore_text">Explore</string>
    <string name="google_text">google</string>
    <string name="facebook_text">facebook</string>
    <string name="twitter_text">twitter</string>
    <string name="library_text">Library</string>
    <string name="heart_text">heart</string>
    <string name="dismiss_image_text">dismiss image</string>
    <string name="by_music_time_text">by FY FM</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="sign_in_text">Sign In</string>
    <string name="update_text">Update</string>
    <string name="your_favourites_text">Your Favourites</string>
    <string name="recommended_playlist_text">Recommended Playlist</string>
    <string name="profile_icon_text">profile icon</string>
    <string name="log_out_text">Log out</string>
    <string name="user_name_text">User name</string>
    <string name="password_text">Password</string>
    <string name="email_text">Email</string>
    <string name="rank_text">Rank - %1$s</string>
    <string name="wrong_email_text">Wrong email address</string>
    <string name="turn_on_internet_connection_text">Internet connection fail. Please turn on Internet connection</string>
    <string name="sign_up_error_occurred_text">Error during sign up occurred</string>
    <string name="data_fetching_error_text">Error during fetching content</string>
    <string name="email_registered_text">This email has already registered</string>
    <string name="username_registered_text">This username has already registered</string>
    <string name="user_registered_text">User with this email has already registered</string>
    <string name="something_went_wrong_text">Something went wrong</string>
    <string name="fetching_tracks_error_text">Something went wrong during fetching tracks</string>
    <string name="database_fetch_error_text">Something went wrong during fetching data from database</string>
    <string name="database_save_error_text">Something went wrong during saving data from database</string>
    <string name="user_name_error_text">Username has to has at least 2 characters</string>
    <string name="password_error_text">Password has to has at least 8 characters</string>
    <string name="passwords_do_not_match_error_text">Passwords do not match</string>
    <string name="log_in_error_text">Invalid email or password</string>
    <string name="choose_avatar_text">Please choose your avatar for Sign Up</string>
    <string name="user_name_registered_error_text">Sorry but this username has already registered</string>
    <string name="confirm_password_text">Confirm password</string>
    <string name="have_account_text">Already have an account?</string>
    <string name="need_account_text">Need an account?</string>
    <string name="music_time_text">Music Time</string>
    <string name="logo_text">logo</string>
    <string name="error_text">Error</string>
</resources>
