<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/error_background"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/text_input_layout_padding">

    <ImageView
        android:id="@+id/dismiss_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:contentDescription="@string/dismiss_image_text"
        android:padding="@dimen/text_input_layout_padding"
        android:src="@drawable/ic_close" />

    <TextView
        android:id="@+id/error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semi_bold"
        android:padding="@dimen/sign_up_text_padding"
        android:text="@string/error_text"
        android:textColor="@android:color/black"
        android:textSize="@dimen/error_text_size" />

    <ImageView
        android:id="@+id/error_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/error_image_text"
        android:src="@drawable/ic_warning" />

    <TextView
        android:id="@+id/error_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="@android:color/transparent"
        android:fontFamily="@font/montserrat_bold"
        android:padding="@dimen/error_description_padding"
        android:textColor="@android:color/black"
        tools:text="@string/app_name" />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/error_description_padding"
        android:layout_marginRight="@dimen/error_description_padding"
        android:background="@drawable/error_button_background"
        android:fontFamily="@font/montserrat_bold"
        android:stateListAnimator="@null"
        android:text="@android:string/ok"
        android:textColor="@android:color/white"
        android:textSize="@dimen/ok_button_size" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/error_description_padding"
        android:layout_marginTop="@dimen/error_description_padding"
        android:layout_marginRight="@dimen/error_description_padding"
        android:background="@android:color/transparent"
        android:fontFamily="@font/montserrat_bold"
        android:stateListAnimator="@null"
        android:text="@android:string/cancel"
        android:textColor="@android:color/black"
        android:textSize="@dimen/ok_button_size" />
</LinearLayout>
