<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue_color"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/top_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_mask_group"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/photo_image_view"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="@dimen/text_input_layout_padding"
            android:background="@drawable/ic_photo_holder_background"
            android:contentDescription="@string/logo_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_input_layout_padding"
            android:layout_marginTop="@dimen/text_input_layout_padding"
            android:layout_marginEnd="@dimen/text_input_layout_padding"
            android:background="@drawable/input_background"
            android:hint="@string/user_name_text"
            android:paddingStart="@dimen/sign_up_text_padding"
            android:paddingEnd="@dimen/sign_up_text_padding"
            android:theme="@style/EditTextTheme"
            app:layout_constraintTop_toBottomOf="@+id/top_background">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="@dimen/drawable_padding"
                android:inputType="textPersonName"
                android:padding="@dimen/sign_up_text_padding"
                android:textColor="@android:color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/user_name_error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/text_input_layout_padding"
            android:paddingEnd="@dimen/text_input_layout_padding"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name_input_layout"
            tools:text="@string/user_name_registered_error_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_input_layout_padding"
            android:layout_marginTop="@dimen/text_input_layout_padding"
            android:layout_marginEnd="@dimen/text_input_layout_padding"
            android:background="@drawable/input_background"
            android:hint="@string/email_text"
            android:paddingStart="@dimen/sign_up_text_padding"
            android:paddingEnd="@dimen/sign_up_text_padding"
            android:theme="@style/EditTextTheme"
            app:layout_constraintTop_toBottomOf="@+id/user_name_error_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="@dimen/drawable_padding"
                android:padding="@dimen/sign_up_text_padding"
                android:textColor="@android:color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/email_error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/text_input_layout_padding"
            android:paddingEnd="@dimen/text_input_layout_padding"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_input_layout"
            tools:text="@string/wrong_email_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_input_layout_padding"
            android:layout_marginTop="@dimen/text_input_layout_padding"
            android:layout_marginEnd="@dimen/text_input_layout_padding"
            android:background="@drawable/input_background"
            android:hint="@string/password_text"
            android:paddingStart="@dimen/sign_up_text_padding"
            android:paddingEnd="@dimen/sign_up_text_padding"
            android:theme="@style/EditTextTheme"
            app:layout_constraintTop_toBottomOf="@+id/email_error_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="@dimen/drawable_padding"
                android:inputType="textPassword"
                android:padding="@dimen/sign_up_text_padding"
                android:textColor="@android:color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/password_error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/text_input_layout_padding"
            android:paddingEnd="@dimen/text_input_layout_padding"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_input_layout"
            tools:text="@string/password_error_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_input_layout_padding"
            android:layout_marginTop="@dimen/text_input_layout_padding"
            android:layout_marginEnd="@dimen/text_input_layout_padding"
            android:background="@drawable/input_background"
            android:hint="@string/confirm_password_text"
            android:paddingStart="@dimen/sign_up_text_padding"
            android:paddingEnd="@dimen/sign_up_text_padding"
            android:theme="@style/EditTextTheme"
            app:layout_constraintTop_toBottomOf="@+id/password_error_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="@dimen/drawable_padding"
                android:inputType="textPassword"
                android:padding="@dimen/sign_up_text_padding"
                android:textColor="@android:color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/confirm_password_error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/text_input_layout_padding"
            android:paddingEnd="@dimen/text_input_layout_padding"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password_input_layout"
            tools:text="@string/passwords_do_not_match_error_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_input_layout_padding"
            android:background="@drawable/rounded_button_background"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/sign_up_text"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sign_up_button_text_size"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password_error_text" />

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>